build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef int32_t angularMode_t;
typedef struct {
  uint8_t bytes[16];
} decQuad;
typedef decQuad real34_t;
typedef struct {
  real34_t real;
  real34_t imag;
} complex34_t;
// typeDefinitions.h's bitfield, verbatim. It used to be `{uint16 rows, uint16
// cols}`, which is a different layout AND has no `mtag` at all -- so every matrix
// angular-mode behaviour was unreachable from this lane, and the owner had to be
// compiled with a matching fake header to link against it.
//
// matrixElements stays an inline array below, deliberately: see the note there.
typedef struct {
  unsigned matrixRows    : 12;
  unsigned matrixColumns : 12;
  unsigned mtag          :  6;
  unsigned notUsed       :  2;
} matrixHeader_t;
// matrixElements is an INLINE ARRAY here and a POINTER in the real ABI, and that
// divergence is recorded rather than fixed. Making it a pointer was attempted and
// abandoned for a measured reason:
//
// this fake runtime never modelled matrix ALLOCATION at all. Inline storage meant
// any matrix -- including one the owner declares `undefined` on its stack and
// passes in to be filled -- always had somewhere to write. With a pointer, each of
// its 34 matrix workers has to initialise its result exactly where c43's own
// worker does, and the fake needs an arena to hand out. Four rounds of that fixed
// four workers and revealed the next each time.
//
// That is the full-core conversion arriving by another route: the whole point of
// the full-core lane is that the real pool and the real matrix lifecycle are
// present. Matrix RESULT coverage belongs there, not here. What this lane can
// still do is compare control flow, which is what it does.
//
// The header above IS unified, because it needed no lifecycle work and it is the
// half that mattered more: without `mtag` no matrix angular-mode behaviour was
// reachable from this lane at all.
typedef struct {
  matrixHeader_t header;
  real34_t matrixElements[4];
} real34Matrix_t;
typedef struct {
  matrixHeader_t header;
  complex34_t matrixElements[4];
} complex34Matrix_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
enum {
  dtLongInteger = 0,
  dtReal34 = 1,
  dtComplex34 = 2,
  dtTime = 3,
  dtDate = 4,
  dtString = 5,
  dtReal34Matrix = 6,
  dtComplex34Matrix = 7,
  dtShortInteger = 8,
  dtConfig = 9,
};
#define ERR_REGISTER_LINE REGISTER_Z
#define NIM_REGISTER_LINE REGISTER_X
#define real34SetPositiveSign(operand) ((operand)->bytes[15] &= 0x7f)
#define real34IsZero(source) decQuadIsZero((const decQuad *)(source))
#define real34IsNegative(source) decQuadIsNegative((const decQuad *)(source))
#define real34Add(operand1, operand2, res) decQuadAdd((res), (operand1), (operand2), &ctxtReal34)
#define real34Divide(operand1, operand2, res) decQuadDivide((res), (operand1), (operand2), &ctxtReal34)
#define real34Multiply(operand1, operand2, res) decQuadMultiply((res), (operand1), (operand2), &ctxtReal34)
#define real34Copy(source, destination) (*(destination) = *(source))
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
void reallocateRegister(calcRegister_t regist, uint32_t data_type, uint16_t data_size_without_data_len_blocks, uint32_t tag);
void convertLongIntegerRegisterToTimeRegister(calcRegister_t source, calcRegister_t destination);
void convertRealToResultRegister(const real_t *real, calcRegister_t dest, angularMode_t angle_mode);
void convertRealToLongIntegerRegister(const real_t *real, calcRegister_t dest, enum rounding roundingMode);
void real34ToIntegralValue(const real34_t *source, real34_t *destination, enum rounding mode);
void real34Subtract(const real34_t *operand1, const real34_t *operand2, real34_t *res);
bool_t real34CompareLessThan(const real34_t *lhs, const real34_t *rhs);
void realToReal34(const real_t *source, real34_t *destination);
void convertComplexToResultRegister(const real_t *real, const real_t *imag, calcRegister_t dest);
void realToIntegralValue(const real_t *source, real_t *destination, enum rounding mode, realContext_t *realContext);
bool_t getSystemFlag(int32_t flag);
void displayCalcErrorMessage(uint8_t error_code, calcRegister_t err_message_register_line, calcRegister_t err_register_line);
void moreInfoOnError(const char *msg1, const char *msg2, const char *msg3, const char *msg4);
void convertReal34MatrixToReal34MatrixRegister(const real34Matrix_t *matrix, calcRegister_t reg);
void convertComplex34MatrixToComplex34MatrixRegister(const complex34Matrix_t *matrix, calcRegister_t reg);
void convertReal34MatrixRegisterToReal34Matrix(calcRegister_t reg, real34Matrix_t *matrix);
void convertComplex34MatrixRegisterToComplex34Matrix(calcRegister_t reg, complex34Matrix_t *matrix);
void convertReal34MatrixRegisterToComplex34MatrixRegister(calcRegister_t source, calcRegister_t destination);
void convertReal34MatrixRegisterToComplex34Matrix(calcRegister_t reg, complex34Matrix_t *matrix);
void convertReal34MatrixToComplex34Matrix(const real34Matrix_t *real_matrix, complex34Matrix_t *complex_matrix);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
void convertRealToReal34ResultRegister(const real_t *real, calcRegister_t dest);
extern uint8_t roundingMode;
#define const34_86400 ((real34_t *)z47_math_wrappers_const34_86400())
void convertTimeRegisterToReal34Register(calcRegister_t source, calcRegister_t destination);
void convertReal34RegisterToTimeRegister(calcRegister_t source, calcRegister_t destination);
void internalDateToJulianDay(real34_t *source, real34_t *destination);