src/c47/registerValueConversions.h

  void convertRealToLongInteger                              (const real_t *real, longInteger_t lgInt, enum rounding mode);
  /********************************************//**
   * \brief Sets function result in real type to the imaginary part of a complex34 register.
   *        This follows preferences of number of significant digits.
   *        This function is intended to avoid error with rounding twice.
   * \warning The destination register must be initialized in advance with complex34 data type,
   *          or else breaks the data in the destination register.
   * \param[in] real the resulting value
   * \param[in] dest the destination register. Usually REGISTER_X or REGISTER_Y.
   ***********************************************/
  void convertRealToImag34ResultRegister                     (const real_t *real, calcRegister_t dest);
  void convertComplexToResultRegisterRPangle                 (const real_t *real, const real_t *imag, calcRegister_t dest, angularMode_t angl, uint8_t polarTag);
  void convertDateRegisterToReal34Register                   (calcRegister_t source, calcRegister_t destination);
  void convertReal34RegisterToDateRegister                   (calcRegister_t source, calcRegister_t destination, bool_t handleYY);
  void    sci_fmt                                            (char *buf, int n, double x);       //Scientific notation without printf float support; replaces snprintf(buf, n, "%.16e", x)
  void    convertDoubleToString                              (double x, int16_t n, char *buff);  //Reformatting double/float strings that are formatted according to different locale settings