zig_src/shell/register_value_conversions.zig


// convertRealToLongInteger moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertRealToLongInteger(re: *const real_t, lgInt: *mpz_struct, roundingMode: c_int) callconv(.c) void;

// convertRealToLongIntegerRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertRealToLongIntegerRegister(real: *const real_t, dest: calcRegister_t, roundingMode: c_int) callconv(.c) void;

// Moved to the base kernel (engine/kernel/register_real34_convert.zig).
pub extern fn realToIntegralValue(source: *const real_t, destination: *real_t, mode: c_int, realContext: *realContext_t) callconv(.c) void;

// ===========================================================================
// real result registers
// ===========================================================================
// Moved to the base kernel (engine/kernel/register_real34_convert.zig); the shell
// owners that reach it through this module resolve it via this re-declaration.
pub extern fn convertRealToReal34ResultRegister(real: *const real_t, dest: calcRegister_t) callconv(.c) void;

// convertRealToImag34ResultRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertRealToImag34ResultRegister(real: *const real_t, dest: calcRegister_t) callconv(.c) void;

// realToReal34 moved to engine/kernel/register_convert_bulk.zig.

// Moved to the base kernel (engine/kernel/register_real34_convert.zig).
pub extern fn convertRealToResultRegister(x: *const real_t, dest: calcRegister_t, angle: angularMode_t) callconv(.c) void;

// convertComplexToResultRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertComplexToResultRegister(real: *const real_t, imag: *const real_t, dest: calcRegister_t) callconv(.c) void;

// convertComplexToResultRegisterRPangle moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertComplexToResultRegisterRPangle(real: *const real_t, imag: *const real_t, dest: calcRegister_t, angl: angularMode_t, polarTag: u8) callconv(.c) void;

// ===========================================================================
// Time / Date
// ===========================================================================
// convertTimeRegisterToReal34Register moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertTimeRegisterToReal34Register(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void;

// convertReal34RegisterToTimeRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34RegisterToTimeRegister(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void;

// convertLongIntegerRegisterToTimeRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertLongIntegerRegisterToTimeRegister(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void;

pub export fn convertDateRegisterToReal34Register(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void {
    var y: real34_t = undefined;
    var m: real34_t = undefined;
    var d: real34_t = undefined;
    var j: real34_t = undefined;
    var isNegative: bool = undefined;

    frontier_date_time.internalDateToJulianDay(reg34(source), &j);
    frontier_date_time.decomposeJulianDay(&j, &y, &m, &d);
    isNegative = real34IsNegative(&y);
    real34SetPositiveSign(&y);

    if (getSystemFlag(FLAG_YMD)) {
        real34Divide(&m, const34_100(), &m);
        real34Multiply(&d, const34_1e_4(), &d);
    } else if (getSystemFlag(FLAG_MDY)) {
        real34Divide(&d, const34_100(), &d);
        real34Divide(&y, const34_1e6(), &y);
    } else if (getSystemFlag(FLAG_DMY)) {
        real34Divide(&m, const34_100(), &m);
        real34Divide(&y, const34_1e6(), &y);
    }

    reallocateRegister(destination, dtReal34, REAL34_SIZE_IN_BLOCKS, amNoneU);
    real34Add(&y, &m, reg34(destination));
    real34Add(reg34(destination), &d, reg34(destination));
    if (isNegative) {
        real34SetNegativeSign(reg34(destination));
    }
}

const rtc_read: *const fn (*tm_t, *dt_t) callconv(.c) void = if (dmcp_build)
    @ptrFromInt(0x08000201 + 204)
else
    undefined;

pub export fn convertReal34RegisterToDateRegister(source: calcRegister_t, destination: calcRegister_t, handleYY: bool) callconv(.c) void {
    var part1: real34_t = undefined;
    var part2: real34_t = undefined;
    var part3: real34_t = undefined;
    var val: real34_t = undefined;
    var isNegative: bool = undefined;

    isNegative = real34IsNegative(reg34(source));
    real34CopyAbs(reg34(source), &part2);
    real34ToIntegralValue(&part2, &part1, DEC_ROUND_DOWN); // Y D or M

    real34Subtract(&part2, &part1, &part2);
    real34Multiply(&part2, const34_100(), &part2);
    real34Copy(&part2, &part3);
    real34ToIntegralValue(&part2, &part2, DEC_ROUND_DOWN); // M or D

    real34Subtract(&part3, &part2, &part3);
    int32ToReal34(if (getSystemFlag(FLAG_YMD)) 100 else 10000, &val);
    real34Multiply(&part3, &val, &part3);
    real34ToIntegralValue(&part3, &part3, DEC_ROUND_DOWN); // D or Y

    if (isNegative) {
        if (getSystemFlag(FLAG_YMD)) {
            real34SetNegativeSign(&part1);
        } else {
            real34SetNegativeSign(&part3);
        }
    }

    var lastCenturyHighUsedtmp: u16 = undefined;
    if (handleYY) {
        // get the actual active YYYY value, excluding the tracking flag
        lastCenturyHighUsedtmp = lastCenturyHighUsed & (YY_MASK_TRACKING - 1);

        // remember last used century if the century is not an abbreviation
        if (getSystemFlag(FLAG_YMD)) {
            if (real34CompareGreaterEqual(&part1, const34_100())) {
                const t: i16 = @truncate(@divTrunc(real34ToInt32(&part1), 100));
                lastCenturyHighUsedtmp = @bitCast(@as(i16, @truncate(@as(i32, 100) * t + 99)));
            }
        }
        // FLAG_MDY // FLAG_DMY
        else if (real34CompareGreaterEqual(&part3, const34_100())) {
            const t: i16 = @truncate(@divTrunc(real34ToInt32(&part3), 100));
            lastCenturyHighUsedtmp = @bitCast(@as(i16, @truncate(@as(i32, 100) * t + 99)));
        }

        // No YYYY digits, i.e. no year given at all, so we use the current year.
        if ((lastCenturyHighUsed & 0x8000) == 0) {
            var pcYear: i32 = undefined;
            if (comptime dmcp_build) {
                var timeInfo: tm_t = undefined;
                var dateInfo: dt_t = undefined;
                rtc_read(&timeInfo, &dateInfo);
                pcYear = dateInfo.year;
            } else {
                const epoch: i64 = time(null);
                const timeInfo = localtime(&epoch);
                pcYear = timeInfo.year + 1900;
            }

            if (getSystemFlag(FLAG_YMD)) {
                if (real34IsZero(&part1)) {
                    uInt32ToReal34(@intCast(pcYear), &part1);
                }
            }
            // FLAG_MDY // FLAG_DMY
            else if (real34IsZero(&part3)) {
                uInt32ToReal34(@intCast(pcYear), &part3);
            }
        }

        // Only YY digits
        const thresholdYYHigh: i16 = @max(0, @as(i16, @bitCast(lastCenturyHighUsed & (YY_MASK_TRACKING - 1))) - 99);
        if (getSystemFlag(FLAG_YMD)) {
            if ((lastCenturyHighUsed & YY_MASK_OFF) == 0 and real34CompareLessThan(&part1, const34_100())) {
                var yy: i16 = @intCast(real34ToInt32(&part1));
                if (yy >= @rem(thresholdYYHigh, 100)) {
                    yy += (thresholdYYHigh - @rem(thresholdYYHigh, 100));
                } else {
                    yy += (thresholdYYHigh - @rem(thresholdYYHigh, 100)) + 100;
                }
                int32ToReal34(@intCast(yy), &part1);
            }
        }
        // FLAG_MDY // FLAG_DMY
        else if ((lastCenturyHighUsed & YY_MASK_OFF) == 0 and real34CompareLessThan(&part3, const34_100())) {
            var yy: i16 = @intCast(real34ToInt32(&part3));
            if (yy >= @rem(thresholdYYHigh, 100)) {
                yy += (thresholdYYHigh - @rem(thresholdYYHigh, 100));
            } else {
                yy += (thresholdYYHigh - @rem(thresholdYYHigh, 100)) + 100;
            }
            int32ToReal34(@intCast(yy), &part3);
        }
    }

    if ((getSystemFlag(FLAG_YMD) and !frontier_date_time.isValidDay(&part1, &part2, &part3)) or
        (getSystemFlag(FLAG_MDY) and !frontier_date_time.isValidDay(&part3, &part1, &part2)) or
        (getSystemFlag(FLAG_DMY) and !frontier_date_time.isValidDay(&part3, &part2, &part1)))
    {
        frontier_error.displayCalcErrorMessage(ERROR_BAD_TIME_OR_DATE_INPUT, ERR_REGISTER_LINE, NIM_REGISTER_LINE);
        moreInfoOnError("In function convertReal34RegisterToDateRegister:", "Invalid date input like 30 Feb.");
        return;
    }

    // update stored YYYY and add the control bits again
    if (handleYY and (lastCenturyHighUsed & YY_MASK_OFF) == 0 and (lastCenturyHighUsed & YY_MASK_TRACKING) != 0) {
        lastCenturyHighUsed = (lastCenturyHighUsed & ~(YY_MASK_TRACKING - 1)) | (lastCenturyHighUsedtmp & (YY_MASK_TRACKING - 1));
    }

    reallocateRegister(destination, dtDate, REAL34_SIZE_IN_BLOCKS, amNoneU);
    if (getSystemFlag(FLAG_YMD)) {
        frontier_date_time.composeJulianDay(&part1, &part2, &part3, reg34(destination));
    } else if (getSystemFlag(FLAG_MDY)) {
        frontier_date_time.composeJulianDay(&part3, &part1, &part2, reg34(destination));
    } else if (getSystemFlag(FLAG_DMY)) {
        frontier_date_time.composeJulianDay(&part3, &part2, &part1, reg34(destination));
    }

    real34Multiply(reg34(destination), const34_86400(), reg34(destination));
    real34Add(reg34(destination), const34_43200(), reg34(destination));
}

// ===========================================================================
// Matrices
// ===========================================================================
// convertReal34MatrixRegisterToReal34Matrix moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34MatrixRegisterToReal34Matrix(regist: calcRegister_t, matrix: *real34Matrix_t) callconv(.c) void;

// convertReal34MatrixToReal34MatrixRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34MatrixToReal34MatrixRegister(matrix: *const real34Matrix_t, regist: calcRegister_t) callconv(.c) void;

// convertComplex34MatrixRegisterToComplex34Matrix moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertComplex34MatrixRegisterToComplex34Matrix(regist: calcRegister_t, matrix: *complex34Matrix_t) callconv(.c) void;

// convertComplex34MatrixToComplex34MatrixRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertComplex34MatrixToComplex34MatrixRegister(matrix: *const complex34Matrix_t, regist: calcRegister_t) callconv(.c) void;

// convertReal34MatrixToComplex34Matrix moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34MatrixToComplex34Matrix(source: *const real34Matrix_t, destination: *complex34Matrix_t) callconv(.c) void;

// convertReal34MatrixRegisterToComplex34Matrix moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34MatrixRegisterToComplex34Matrix(source: calcRegister_t, destination: *complex34Matrix_t) callconv(.c) void;

// convertReal34MatrixRegisterToComplex34MatrixRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34MatrixRegisterToComplex34MatrixRegister(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void;

// ===========================================================================
// Doubles and floats
// ===========================================================================
// sci_fmt moved to engine/kernel/register_convert_bulk.zig.
pub extern fn sci_fmt(buf: [*c]u8, n: c_int, x_arg: f64) callconv(.c) void;

// convertDoubleToString moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertDoubleToString(x: f64, n: i16, buff: [*c]u8) callconv(.c) void;
